# scene3d

./: .gitignore  CMakeLists.txt  cube.fbx  geomake.vcxproj  geomake.vcxproj.filters  gfxdemo.html  glh.py  glinc.tmp  glview.vcxproj  glview.vcxproj.filters  libnapp.vcxproj  libnapp.vcxproj.filters  libnapp_uwp.vcxproj  libnapp_uwp.vcxproj.filters  libnapp_win32.vcxproj  libnapp_win32.vcxproj.filters  scene3d.code-workspace  scene3d.sln  scene3d.vcxproj  scene3d.vcxproj.filters  uwp_app.appxmanifest  uwp_app.pfx  uwp_app.vcxproj  uwp_app.vcxproj.filters  vkview.vcxproj  vkview.vcxproj.filters  webgl2.js
assets/: README.txt
assets/maps/: default.tmx  tileset.tsx
assets/shaders/: OverlayVertexShader.hlsl  shaders.ini
inc/gfx/: common.h  glfunc.inl  opengl.h  vulkan.h
inc/napp/: appmain.h  callback.h  filesys.h  macros.h  window.h
proj/d3d12app/: d3d12app.vcxproj  d3d12app.vcxproj.filters
proj/msvc/: scene3d.vcxproj  scene3d.vcxproj.filters
proj/msvc/s3dconv/: s3dconv.vcxproj  s3dconv.vcxproj.filters
proj/msvc/scene3dx/: scene3dx.vcxproj  scene3dx.vcxproj.filters
proj/msvc/sdlbase/: sdlbase.vcxproj  sdlbase.vcxproj.filters
proj/vkdemos/: vk_clearscr.vcxproj  vk_clearscr.vcxproj.filters
python/: s3dconv.py  s3dexport.py
shaders/: OverlayPixelShader.hlsl  README.txt  TileMapPixelShader.hlsl  TileMapVertexShader.hlsl  cityget.comp  default.frag  default.vert  fragment.inc  random.inc  test.comp  vertex.inc
src/: README.txt  args.c  args.h  container.c  container.h  cube.inl  d3d12app.cpp  fbx_utils.cpp  fbx_utils.h  global.h  macos.m  macros.h  main.c  math_lib.c  math_lib.h  memory.c  memory.h  pcgen.c  render.c  render.h  scene.c  utils.c  utils.h  vk_api.c  vk_api.cpp  vk_api.h  vk_api.inl  vk_clearscr.c  vk_context.c  vk_context.h  vk_types.h  win32.c  xgetopt.cpp  xgetopt.h
src/common/: args.c  memory.c  memory.h  random.c  random.h  scene.h  thrdpool.c  vecmath.c  vecmath.h
src/geomake/: geomake.cpp  writers.cpp  writers.hpp
src/glview/: glfunc.inl  main.cpp  renderer.cpp  renderer.hpp  utils.cpp  utils.hpp
src/mkmat/: mkmat.c
src/napp/: common.c  common.h  macos_impl.m  napp.h  napp_assert.h  napp_init.c  napp_init_mac.m  napp_macos.m  napp_main.h  napp_private.h  napp_vkdevice.h  napp_vkinstance.h  napp_vulkan.c  napp_vulkan.h  napp_winapi.c  napp_winrt.cpp  platform.h  win32_impl.c
src/platform/: args.c  args.h  win32.c
src/renderer/: render_init.inl  render_pass.inl  renderer.c  renderer.h  vk_api.c  vk_api.h  vk_api.inl
src/s3dconv/: s3dconv.c
src/scene3dx/: common.cpp  common.hpp  isoview.cpp  isoview.hpp  main.cpp  memory.cpp  memory.hpp  renderer.cpp  renderer.hpp  scene3dx.cpp  scene3dx.hpp  tilemap.cpp  tilemap.hpp  vecmath.hpp  winmain.cpp
src/scene3dx/vk_api/: vulkan.inl  vulkan_cxx.hpp
src/sdlbase/: main.c
src/shared/: args.h  args.inl  global.c  global.h  gltf.c  gltf.h  macos.m  main.c  main.h  main.inl  vk_api.c  vk_api.h  vk_api.inl  win32.c
src/the_base/: main.cpp
src/uwp_app/: App.cpp  App.h  uwp_appMain.cpp  uwp_appMain.h  uwp_main.cpp
src/uwp_app/Common/: DeviceResources.cpp  DeviceResources.h
src/uwp_app/Content/: Sample3DSceneRenderer.cpp  Sample3DSceneRenderer.h  ShaderStructures.h
src/vkview/: assets.c  assets.h  coredefs.h  main.c  platform.c  platform.h  vkview.vert
test/gltf/: TestScene.gltf
test/glview/: cube.bmd  dode.bmd  glview.bmt  glview.frag  glview.vert  icos.bmd  octa.bmd  tetr.bmd
textures/: 4pixel.tga
